Conectando ao MySQL

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
 PORT=3000
 
-MYSQL_DB=teste
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_PORT=3306
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_DB=
+MYSQL_USER=
+MYSQL_PASSWORD=
 
-PG_DB=teste
-PG_USER=root
-PG_PASSWORD=root
-PG_PORT=5432
+PG_HOST=
+PG_PORT=
+PG_DB=
+PG_USER=
+PG_PASSWORD=
