--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mustache-express": "^1.3.1",
+    "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "validator": "^13.6.0"
   }
