--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "mustache-express": "^1.3.1",
     "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "validator": "^13.6.0"
   }
